--- a/src/Vistas/Categorias/FrmEditarCategoria.form
+++ b/src/Vistas/Categorias/FrmEditarCategoria.form
@@ -178,6 +178,9 @@
         <Component class="javax.swing.JSeparator" name="jSeparator1">
         </Component>
         <Component class="javax.swing.JTextField" name="tFNombreCategoria">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Nombre de categoria"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -198,6 +201,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="toolTipText" type="java.lang.String" value="Descripcion de categoria"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -213,11 +217,13 @@
         <Component class="javax.swing.JCheckBox" name="cBActivar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Activar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Activar"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JCheckBox" name="cBDesactivar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Desactivar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Desactivar"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -229,6 +235,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tFechaRegistro">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Fecha de registro"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnRegistrar">
           <Properties>
@@ -239,6 +248,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Editar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Editar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarActionPerformed"/>
@@ -253,6 +263,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Regresar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalirActionPerformed"/>
