--- a/src/Vistas/Categorias/FrmRegistrarCategoria.form
+++ b/src/Vistas/Categorias/FrmRegistrarCategoria.form
@@ -185,6 +185,9 @@
         <Component class="javax.swing.JSeparator" name="jSeparator1">
         </Component>
         <Component class="javax.swing.JTextField" name="tFNombreCategoria">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Nombre de categoria"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -205,6 +208,7 @@
               <Properties>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="toolTipText" type="java.lang.String" value="Descripcion de categoria"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -220,11 +224,16 @@
         <Component class="javax.swing.JCheckBox" name="cBActivar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Activar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Activar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cBActivarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JCheckBox" name="cBDesactivar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Desactivar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Desactivar"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -236,6 +245,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tFechaRegistro">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Fecha de registro"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnRegistrar">
           <Properties>
@@ -246,6 +258,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Registrar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Registrar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarActionPerformed"/>
@@ -260,6 +273,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Regresar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalirActionPerformed"/>
