--- a/src/Vistas/Proveedores/FrmEditarProveedor.form
+++ b/src/Vistas/Proveedores/FrmEditarProveedor.form
@@ -156,6 +156,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="Nombre">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Nombre"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
@@ -166,6 +169,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfRFC">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="RFC"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
           <Properties>
@@ -176,6 +182,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfCorreo">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Correo"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
@@ -186,6 +195,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfNoTelefono">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="No. telefono"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnRegistrar">
           <Properties>
@@ -196,6 +208,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Editar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Editar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarActionPerformed"/>
@@ -210,6 +223,7 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Regresar"/>
+            <Property name="toolTipText" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalir5ActionPerformed"/>
